--- a/modules/gradebook/gradebook-web/src/main/resources/META-INF/resources/assignment/entry_search_columns.jspf
+++ b/modules/gradebook/gradebook-web/src/main/resources/META-INF/resources/assignment/entry_search_columns.jspf
@@ -9,8 +9,7 @@
     <%-- Descriptive (list) view --%>
 
     <c:when
-            test='${assignmentsManagementToolbarDisplayContext.ge
-tDisplayStyle().equals("descriptive")}'>
+            test='${assignmentsManagementToolbarDisplayContext.getDisplayStyle().equals("descriptive")}'>
         <%-- User --%>
         <liferay-ui:search-container-column-user
                 showDetails="<%=false%>"
@@ -18,12 +17,7 @@ tDisplayStyle().equals("descriptive")}'>
         />
         <liferay-ui:search-container-column-text colspan="<%=2%>">
             <%
-                String modifiedDateDescription =
-                        LanguageUtil.getTimeDescription(
-                                request, System.currentTimeMillis
-                                        ()
-                                        - entry.getModifiedDate().getTime
-                                        (), true);
+                String modifiedDateDescription = LanguageUtil.getTimeDescription(request, System.currentTimeMillis()- entry.getModifiedDate().getTime(), true);
             %>
             <h5 class="text-default">
                 <liferay-ui:message
